--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -1,7 +1,25 @@
 <html>
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	</head>
 	<body>
-		<p>
-			Hola
-		</p>
+		<div class="container mt-5">
+			<table class="table table-striped">
+				<tr>
+					<td>nombre</td>
+					<td>nota 1:</td>
+					<td>nota 2:</td>
+					<td>nota 3:</td>
+					<td>resultado</td>
+				</tr>
+				<tr>
+					<td><p th:text="${alumno.nombre}"></p></td>
+					<td><p th:text="${alumno.nota1}"></p></td>
+					<td><p th:text="${alumno.nota2}"></p></td>
+					<td><p th:text="${alumno.nota3}"></p></td>
+					<td><p th:text="${promedio}"></p></td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
